<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="download_button_text">Download</string>
    <string name="download_button_process_text">We are loading</string>

    <string name="glide_text">Glide - Image Loading Library by BumpTech</string>
    <string name="load_app_text">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_text">Retrofit - Type-safe HTTP client for Android and Java by Square, etc</string>
    <string name="header_image_description">Main page header area.</string>
    <string name="download_image_description">Download image on the page header.</string>
    <string name="option_required">Please select the file to download.</string>

    <string name="general_notification_channel_id">general_notification_channel</string>
    <string name="general_notification_channel">General notification</string>
    <string name="notification_detail_button">Details</string>
    <string name="filename_text">File name:</string>
    <string name="file_description_text">File Description</string>
    <string name="status_text">Status:</string>
    <string name="status_description_text">Success</string>
    <string name="ok_button">OK</string>
    <string name="download_success">Download completed.</string>
    <string name="download_fail">Failed to file download.</string>
</resources>
