<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/header_image"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/header_image_description"
        android:cropToPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorPrimaryDark"
        tools:srcCompat="@color/colorPrimaryDark" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/download_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/download_image_description"
        android:src="@android:drawable/stat_sys_download"
        app:layout_constraintBottom_toBottomOf="@+id/header_image"
        app:layout_constraintEnd_toEndOf="@+id/header_image"
        app:layout_constraintStart_toStartOf="@+id/header_image"
        app:layout_constraintTop_toTopOf="@+id/header_image"
        app:srcCompat="@android:drawable/stat_sys_download" />

    <RadioGroup
        android:id="@+id/radio_options"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_image">

        <RadioButton
            android:id="@+id/radio_glide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/glide_text"
            style="@style/RadioButtonStyle" />

        <RadioButton
            android:id="@+id/radio_loadapp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/load_app_text"
            style="@style/RadioButtonStyle"  />

        <RadioButton
            android:id="@+id/radio_retrofit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retrofit_text"
            style="@style/RadioButtonStyle"  />

    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:backgroundColor="@color/colorPrimary"
        app:buttonFontColor="@color/white"
        app:buttonFontSize="60"
        app:buttonText="@string/download_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>